# hajime

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.work
.cursor/rules/: go-with-bazel.mdc
grpc_example/: README.md
grpc_example/go/: BUILD.bazel  go.mod
grpc_example/go/client/: main.go
grpc_example/go/server/: main.go
grpc_example/proto/: BUILD.bazel  greeter.proto
grpc_example/rust/: BUILD.bazel
grpc_example/rust/client/: main.rs
grpc_example/rust/server/: main.rs
hello_rust/: BUILD.bazel
hello_rust/src/: main.rs
scripts/: BUILD.bazel
starter/: BUILD.bazel  go.mod
starter/cmd/starter/: BUILD.bazel  main.go
