load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

exports_files(["greeter.proto"])

proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greeter_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/bazelment/hajime/grpc_example/proto/greeter",
    proto = ":greeter_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "greeter_rust_proto",
    proto = ":greeter_proto",
    visibility = ["//visibility:public"],
)
