load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "starter",
    embed = [":starter_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "starter_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelment/hajime/starter/cmd/starter",
    visibility = ["//visibility:private"],
)
